background placement for the banner

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;700;800&family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Car sharing</title>
 </head>
 <body>
@@ -66,7 +66,7 @@
                 <button class="button-red blog-box-button">read more</button>
             </article>
             <article class="blog-box">
-                <img class="blog-box-image" src="assets/blog-photo3.png" />
+                <img class="blog-box-image" src="./assets/blog-photo3.png" />
                 <h3 class="blog-box-title">Lorem ipsum sit dolor</h3>
                 <p class="blog-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 <button class="button-red blog-box-button">read more</button>
@@ -103,6 +103,17 @@
                 <button class="button-red service-box-button">read more</button>
             </article>
         </div>
+    </div>
+</section>
+<section id="contact" class="contact">
+    <div class="container">
+        <h2 class="section-title">contakt</h2>
+        <article class="service-box">
+            <img class="service-box-image" src="assets/mini1.png" />
+            <h3 class="service-box-title">lorem ipsum sit dolor</h3>
+            <p class="service-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+            <button class="button-red service-box-button">read more</button>
+        </article>
     </div>
 </section>
 </body>
