--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@
                 <button class="button-red service-box-button">read more</button>
             </article>
             <article class="service-box">
-                <img class="service-box-image" src="assets/mini1.png" />
+                <img class="service-box-image" src="assets/mini2.png" />
                 <h3 class="service-box-title">lorem ipsum sit dolor</h3>
                 <p class="service-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
                 <button class="button-red service-box-button">read more</button>
             </article>
             <article class="service-box">
-                <img class="service-box-image" src="assets/mini1.png" />
+                <img class="service-box-image" src="assets/mini3.png" />
                 <h3 class="service-box-title">lorem ipsum sit dolor</h3>
                 <p class="service-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
                 <button class="button-red service-box-button">read more</button>
             </article>
             <article class="service-box">
-                <img class="service-box-image" src="assets/mini1.png" />
+                <img class="service-box-image" src="assets/mini4.png" />
                 <h3 class="service-box-title">lorem ipsum sit dolor</h3>
                 <p class="service-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
                 <button class="button-red service-box-button">read more</button>
@@ -108,12 +108,23 @@
 <section id="contact" class="contact">
     <div class="container">
         <h2 class="section-title">contakt</h2>
-        <article class="service-box">
-            <img class="service-box-image" src="assets/mini1.png" />
-            <h3 class="service-box-title">lorem ipsum sit dolor</h3>
-            <p class="service-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-            <button class="button-red service-box-button">read more</button>
-        </article>
+        <div class="contact-boxs">
+            <article class="contact-box">
+                    <img class="contact-box-image" src="assets/Form-Photo.png" />
+            </article>
+
+            <form class="contact-box">
+                <input class="contact-form-input" type="text" placeholder="Type your name" />
+                <input class="contact-form-input" type="text" placeholder="Type your e-mail" />
+                <input class="contact-form-input contact-form-input-message" type="text" placeholder="massage">
+
+            </form>
+        </div>
+    </div>
+
+
+
+
     </div>
 </section>
 </body>
