working with CSS contact me style

--- a/index.html
+++ b/index.html
@@ -107,20 +107,20 @@
 </section>
 <section id="contact" class="contact">
     <div class="container">
-        <h2 class="section-title">contakt</h2>
+        <h2 class="section-title">contact</h2>
         <div class="contact-boxes">
             <article class="contact-box">
-                    <img class="contact-box-image" src="assets/Form-Photo.png" />
+                <img class="contact-box-image" src="assets/Form-Photo.png" />
             </article>
 
             <form class="contact-box">
                 <input id="form-name" class="contact-form-input" type="text" placeholder="Type your name" required minlength="4" />
-                <input id="form-email" class="contact-form-input" type="text" placeholder="Type your e-mail" size="30" />
-                <input id="form-message" class="contact-form-input contact-form-input-message" type="text" placeholder="massage">
+                <input id="form-email" class="contact-form-input" type="email" placeholder="Type your e-mail" required />
+                <textarea id="form-message" class="contact-form-input contact-form-input-message" placeholder="Type your message" required></textarea>
+                <button type="submit" class="button-red contact-form-button">Send</button>
             </form>
         </div>
     </div>
-  </div>
 </section>
 <footer class="footer">
     <div class="container">
