working with CSS and text

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="banner-overlay"></div>
     <div class="container">
         <h1 class="banner-title">car sharing</h1>
-        <p class="banner-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p class="banner-text">Our car rental service offers a wide range of vehicles tailored to your needs. From compact cars to SUVs, we ensure quality and affordability. Book easily through our app and enjoy seamless travel solutions.</p>
         <div class="banner-buttons">
             <button class="button-red banner-button">share a car</button>
             <button class="button-white banner-button">key features</button>
@@ -55,20 +55,20 @@
         <div class="blog-boxes">
             <article class="blog-box">
                 <img class="blog-box-image" src="assets/blog-photo1.png" />
-                <h3 class="blog-box-title">Lorem ipsum sit dolor</h3>
-                <p class="blog-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <h3 class="blog-box-title">Automatic and manual transmissions</h3>
+                <p class="blog-box-text">Our car rental fleet offers vehicles with automatic and manual transmissions to suit every driver's preference. Automatic options provide seamless convenience, while manual options offer greater control for enthusiasts. Choose the one that fits your style of driving.</p>
                 <button class="button-red blog-box-button">read more</button>
             </article>
             <article class="blog-box">
                 <img class="blog-box-image" src="assets/blog-photo2.png" />
-                <h3 class="blog-box-title">Lorem ipsum sit dolor</h3>
-                <p class="blog-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <h3 class="blog-box-title">Classic car brands</h3>
+                <p class="blog-box-text">Our rental service features classic car brands for enthusiasts and special occasions. Experience the elegance of Jaguar, the prestige of Mercedes-Benz, and the thrill of Ferrari. Discover timeless icons and make your journey unforgettable with our exclusive fleet.</p>
                 <button class="button-red blog-box-button">read more</button>
             </article>
             <article class="blog-box">
                 <img class="blog-box-image" src="./assets/blog-photo3.png" />
-                <h3 class="blog-box-title">Lorem ipsum sit dolor</h3>
-                <p class="blog-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <h3 class="blog-box-title">powerful and economical engines</h3>
+                <p class="blog-box-text">Our car rental fleet offers vehicles with powerful engines for thrilling performance and fuel-efficient options for eco-friendly drives. Whether you seek speed or savings, our diverse range ensures the perfect match for your journey.</p>
                 <button class="button-red blog-box-button">read more</button>
             </article>
         </div>
@@ -80,26 +80,26 @@
         <div class="service-boxes">
             <article class="service-box">
                 <img class="service-box-image" src="assets/mini1.png" />
-                <h3 class="service-box-title">lorem ipsum sit dolor</h3>
-                <p class="service-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                <h3 class="service-box-title">home delivery</h3>
+                <p class="service-box-text">We deliver cars directly to your doorstep in every major city and rural area. Our service ensures convenience and accessibility, whether you're in the heart of the city or the peaceful countryside. Experience hassle-free car rentals wherever you are.</p>
                 <button class="button-red service-box-button">read more</button>
             </article>
             <article class="service-box">
                 <img class="service-box-image" src="assets/mini2.png" />
-                <h3 class="service-box-title">lorem ipsum sit dolor</h3>
-                <p class="service-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                <h3 class="service-box-title">possibility of checking in the application</h3>
+                <p class="service-box-text">Our app allows you to check car availability and service fees in real time. Stay updated on the latest options and pricing, ensuring a smooth rental experience. Convenience at your fingertips, wherever you are.</p>
                 <button class="button-red service-box-button">read more</button>
             </article>
             <article class="service-box">
                 <img class="service-box-image" src="assets/mini3.png" />
-                <h3 class="service-box-title">lorem ipsum sit dolor</h3>
-                <p class="service-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                <h3 class="service-box-title">Autocasco (AC) 24h</h3>
+                <p class="service-box-text">Our Autocasco insurance covers up to 1000 units and offers swift claims processing within 24 hours. Benefit from reliable coverage and fast support to ensure peace of mind for your vehicle.</p>
                 <button class="button-red service-box-button">read more</button>
             </article>
             <article class="service-box">
                 <img class="service-box-image" src="assets/mini4.png" />
-                <h3 class="service-box-title">lorem ipsum sit dolor</h3>
-                <p class="service-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                <h3 class="service-box-title">service in all European countries</h3>
+                <p class="service-box-text">We can deliver cars to all countries across Europe. Our service ensures flexibility and convenience for international travel. Whether you're planning a trip or need a vehicle abroad, we've got you covered with seamless delivery options.</p>
                 <button class="button-red service-box-button">read more</button>
             </article>
         </div>
