--- a/index.html
+++ b/index.html
@@ -18,21 +18,18 @@
             <span class="logo-sharing">sharing</span>
         </div>
         <nav>
-            <ul class="nav-list">
-                <li>
-                    <a class="nav-list-link" href="#home">home</a>
-                </li>
-                <li>
-                    <a class="nav-list-link" href="#blog">blog</a>
-                </li>
-                <li>
-                    <a class="nav-list-link" href="#service">service</a>
-                </li>
-                <li>
-                    <a class="nav-list-link" href="#contact">contact</a>
-                </li>
+            <ul class="nav-list mobile-hidden">
+                <li><a class="nav-list-link" href="#home">home</a></li>
+                <li><a class="nav-list-link" href="#blog">blog</a></li>
+                <li><a class="nav-list-link" href="#service">service</a></li>
+                <li><a class="nav-list-link" href="#contact">contact</a></li>
             </ul>
         </nav>
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </div>
 </header>
 <section id="home" class="banner">
@@ -162,7 +159,14 @@
         </div>
     </div>
 </footer>
-</body>
-</html>
+<script>
+    const hamburger = document.querySelector('.hamburger');
+    const navList = document.querySelector('.nav-list');
+
+    hamburger.addEventListener('click', () => {
+        navList.classList.toggle('mobile-visible');
+        navList.classList.toggle('mobile-hidden');
+    });
+</script>
 </body>
 </html>
