--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </article>
             <article class="service-box">
                 <img class="service-box-image" src="assets/mini3.png" />
-                <h3 class="service-box-title">Autocasco (AC) 24h</h3>
+                <h3 class="service-box-title">Autocasco 24h</h3>
                 <p class="service-box-text">Our Autocasco insurance covers up to 1000 units and offers swift claims processing within 24 hours. Benefit from reliable coverage and fast support to ensure peace of mind for your vehicle.</p>
                 <button class="button-red service-box-button">read more</button>
             </article>
@@ -170,4 +170,5 @@
     });
 </script>
 </body>
+
 </html>
